<resources>


    <!--App name-->
    <string name="app_name">Local Laundry App</string>

    <string name="google_login_client_Id" translatable="false">206553382681-55q2crl47ec94m8t3hqj8po5uf6ji081.apps.googleusercontent.com</string>

    <string name="Change_language">Change Language</string>
    <string name="Choose_language">choose language</string>
    <string name="get_started">Get started</string>
    <string name="login_title">Login</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter Your Name</string>


    <!--    Login Activity-->
    <string name="hello_greeting">Hello</string>
    <string name="logyou_button">Logout</string>


    <!--&lt;!&ndash;    <string name="text">#appchallenge2 #May2025&ndash;&gt;-->
    <!--৫ হাজার টাকার প্রাইজমানি চ্যালেঞ্জ।-->
    <!--🧺 Local Laundry App-->
    <!--⚠️সমস্যা:-->
    <!--অনেক এলাকায় Laundry Service আছে কিন্তু কাপড় নিয়ে দোকানে যেতে হয়। ব্যস্ত মানুষ সময় পায়না। অসুস্থ / চাকরিজিবি / বৃদ্ধ মানুষের জন্য কাপড় ধোয়া একটা হ্যাসেল।-->
    <!--✅সমাধানঃ-->
    <!--এমন একটি সহজ, সুন্দর ফাংশনাল অ্যাপ যার মাধ্যমে মানুষ তার সার্ভিস সিলেকশন (কাপড় ধোয়া, ইস্ত্রি, প্যাকেজ) সিলেক্ট করে নাম, ফোন নাম্বার, ঠিকানা দিয়ে সার্ভিস অর্ডার প্লেস করবে।-->
    <!--📲ফিচারঃ-->
    <!--১। অর্ডার নিজস্ব Database (MySQL) অথবা Firebase এ রাখতে পারেন-->
    <!--২। ইউজার অর্ডার করার পর দেখতে পাবে তার order status!!-->
    <!--৩। লগিন / সাইনআপ ফিচার থাকতে হবে। চাইলে Login with Google ফিচার ব্যবহার করা যাবে (সিজন-৩, Lecture Class 3103) &ndash;&gt; এই ক্লাস পর্যন্ত না গেলে দরকার নাই-->
    <!--৪। অ্যাডমিন প্যানেল দেখানো জরুরী না। সার্ভার থেকে ড্যাটা চেঞ্জ করে করে টেস্ট করে দেখালেই হবে-->
    <!--✔️ প্রেক্ষাপটঃ-->
    <!--ধরুন, আপনি একজন উদ্যোক্তা। আপনার এলাকার একটা লন্ড্রি সার্ভিসের সাথে কথা বলে রেখেছেন। আপনি তাঁকে অর্ডার এনে দিবেন এবং সে প্রফিট শেয়ার করবে। অথবা আপনি বড় একটা ওয়াশিং ম্যাশিন কিনেছেন। লোক রেখেছেন এই কাজের জন্য। এখন অ্যাপের মাধ্যমে মানুষ আপনার লন্ড্রি সেবা পাবে।-->
    <!--✔️ সাজেশনঃ-->
    <!--আপনি এই টাইপের প্রতিষ্ঠিত কিছু অ্যাপের ওয়ার্কফ্লো দেখে সেখান থেকে আইডিয়া নিয়ে আপনার নিজের প্রোগ্রামিং দক্ষতা অনুযায়ী কাজে লাগাবেন। এবং ভাববেন, আপনি সত্যিই এই ধরনের একটা Startup চালু করবেন।-->
    <!--✅✅✅-->
    <!--চ্যালেঞ্জে অংশ নেওয়ার জন্যঃ-->
    <!--১। Student ID, #appchallenge2, #May2025 -হ্যাশট্যাগ সহ গ্রুপে কাজের স্ক্রিনশট / স্ক্রিন রেকর্ড ভিডিও উপস্থাপন করবেন।-->
    <!--(অ্যাপটা কেমন তা দেখানোর জন্য )-->
    <!--২। ৩-৪ মিনিটের একটা পিচ ভিডিও সেম হ্যাশট্যাগ দিয়ে আরেকটা পোস্টে শেয়ার করতে হবে। পিচ ভিডিওতে সংক্ষেপে বলবেন সমস্যা, সমাধান, আর আপনার বিজনেস প্ল্যান ৩-৪ মিনিটের মধ্যে।-->
    <!--পিচ ভিডিওর উপর বেশি মার্কিং থাকবে-->
    <!--Example Pitch Video:-->
    <!--https://youtu.be/kS5MCO7jijY-->
    <!--কাজ জমা দিবেন ২০-২৫ মে, ২০২৫ এর মধ্যে।-->
    <!--Note: জাজমেন্টের সময় দুইজনের মার্কিং সমান হয়ে গেলে যে আগে কাজ জমা দিয়েছে তাকেই প্রাইজমানি দেওয়া হবে</string>-->


</resources>